--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_label_scheme"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -72,7 +72,7 @@
                 android:id="@+id/tv_text_scheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_scheme"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="\?" />
@@ -81,7 +81,7 @@
                 android:id="@+id/tv_label_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_brand"
                 android:layout_marginTop="20dp"
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_brand"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="\?" />
@@ -102,7 +102,7 @@
                 android:id="@+id/tv_label_card_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_card_number"
                 android:layout_marginTop="20dp"
@@ -115,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tv_label_length"
                 android:textSize="11sp"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_card_number"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -123,7 +123,7 @@
                 android:id="@+id/tv_text_length"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_length"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="\?"/>
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tv_label_luhn"
                 android:textSize="11sp"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:layout_marginStart="60dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_card_number"
                 app:layout_constraintStart_toEndOf="@id/tv_label_length" />
@@ -143,7 +143,7 @@
                 android:id="@+id/tv_text_luhn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_luhn"
                 app:layout_constraintStart_toStartOf="@id/tv_label_luhn"
                 tools:text="\?"/>
@@ -153,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_label_type"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:layout_marginStart="60dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -163,7 +163,7 @@
                 android:id="@+id/tv_text_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_type"
                 app:layout_constraintStart_toStartOf="@id/tv_label_type"
                 tools:text="\?" />
@@ -172,7 +172,7 @@
                 android:id="@+id/tv_label_prepaid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_prepaid"
                 android:layout_marginTop="20dp"
@@ -183,7 +183,7 @@
                 android:id="@+id/tv_text_prepaid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/tv_label_prepaid"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_prepaid"
                 tools:text="\?" />
@@ -192,7 +192,7 @@
                 android:id="@+id/tv_label_country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_country"
                 android:layout_marginTop="20dp"
@@ -203,7 +203,7 @@
                 android:id="@+id/tv_text_country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 android:maxWidth="150dp"
                 android:singleLine="false"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_country"
@@ -214,7 +214,7 @@
                 android:id="@+id/tv_label_latitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_latitude"
                 android:textSize="11sp"
@@ -225,7 +225,6 @@
                 android:id="@+id/tv_text_latitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
                 android:gravity="center"
                 android:textSize="11sp"
                 android:textColor="@color/blue"
@@ -238,7 +237,7 @@
                 android:id="@+id/tv_label_longitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_longitude"
                 android:textSize="11sp"
@@ -249,7 +248,6 @@
                 android:id="@+id/tv_text_longitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
                 android:gravity="center"
                 android:textSize="11sp"
                 android:textColor="@color/blue"
@@ -262,7 +260,7 @@
                 android:id="@+id/tv_label_brace"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_brace"
                 android:textSize="11sp"
@@ -282,7 +280,7 @@
                 android:id="@+id/tv_label_bank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.8"
+                android:alpha="0.6"
                 android:gravity="center"
                 android:text="@string/tv_label_bank"
                 android:layout_marginTop="10dp"
@@ -294,7 +292,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="11sp"
-                android:alpha="0.8"
+                android:textStyle="bold"
                 tools:text="\?"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_bank"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -304,7 +302,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="11sp"
-                android:alpha="0.8"
                 android:autoLink="web"
                 android:textColorLink="@color/blue"
                 tools:text="\?"
@@ -316,7 +313,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="11sp"
-                android:alpha="0.8"
                 android:autoLink="phone"
                 android:textColorLink="@color/blue"
                 tools:text="\?"
